src/objects/WorkPlan__c.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>客户名称</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Work Plan</relationshipLabel>
        <relationshipName>Work_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActivitiesDistinguish__c</fullName>
        <label>活动区分</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>客户相关活动</fullName>
                </value>
                <value>
                    <fullName>非客户相关活动</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ActivityDate__c</fullName>
        <description>对应Event上的ActivityDate(标准字段)</description>
        <label>ActivityDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ActivityDescription__c</fullName>
        <label>活动描述</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ActivityId__c</fullName>
        <description>销售活动ID</description>
        <label>ActivityId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>备注</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompletionStatus__c</fullName>
        <label>完成状态</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>已完成</fullName>
                </value>
                <value>
                    <fullName>未完成</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventId__c</fullName>
        <description>唯一值为 ownerId + WeeklyReport Id + EventId + week Number</description>
        <externalId>true</externalId>
        <label>EventId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NeedSupport__c</fullName>
        <label>需要支持</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityActivityTheme__c</fullName>
        <label>销售活动类型</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesWeeklyReport__c</fullName>
        <label>销售周报</label>
        <referenceTo>SalesWeeklyReport__c</referenceTo>
        <relationshipLabel>工作计划</relationshipLabel>
        <relationshipName>Work_Plan</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>活动主题</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>类型</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>本周</fullName>
                </value>
                <value>
                    <fullName>下周</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WeekChinese__c</fullName>
        <label>日期</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>星期一</fullName>
                </value>
                <value>
                    <fullName>星期二</fullName>
                </value>
                <value>
                    <fullName>星期三</fullName>
                </value>
                <value>
                    <fullName>星期四</fullName>
                </value>
                <value>
                    <fullName>星期五</fullName>
                </value>
                <value>
                    <fullName>星期六</fullName>
                </value>
                <value>
                    <fullName>星期日</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>联系人</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Work Plan</relationshipLabel>
        <relationshipName>Work_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>工作情况</label>
    <nameField>
        <label>工作情况 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Plan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>